syntax = "proto3";

option go_package = "protoCompiles";

enum events {
	CHAT_CONTENT = 0;
	CHAT_RECORDS = 1;
	GDRAW_CONTENT = 2;
	GDRAW_ROOMCREATE = 3;
}

message ws_msg_base {
    events event = 1;
    bytes data = 2;
}

message chat_content {
	string msg = 1;
	string time_string = 2;
	int32 timer = 3;
}

message gdraw_content {
	int32 x = 1;
	int32 y = 2;
	string color = 3;
	int32 size = 4;
	int64 uid = 5;
	string room_id = 6;
}



